Create basic API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   db:
-    image: postgres
+    image: postgres:16
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -15,3 +17,6 @@ services:
       - "8080:8080"
     depends_on:
       - db
+
+volumes:
+  pgdata:
